...
                              padding: const EdgeInsets.all(10.0),
                              tabs: const [
                                Tab(
                                  text: 'Sign Up',
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_k8wn'),
                                  text: 'Login',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                          alignment:
                                              const AlignmentDirectional(-1.0, 0.0),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key:
                                                  const ValueKey('SignUp_Email_ptei'),
                                              controller: _model
                                                  .signUpEmailTextController,
                                              focusNode:
                                                  _model.signUpEmailFocusNode,
                                              autofocus: false,
                                              obscureText: false,
...
                                          alignment:
                                              const AlignmentDirectional(-1.0, 0.0),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: const ValueKey(
                                                  'SignUp_Password_70vb'),
                                              controller: _model
                                                  .signUpPasswordTextController,
                                              focusNode: _model
                                                  .signUpPasswordFocusNode,
                                              autofocus: false,
                                              obscureText: !_model
...
                                          alignment:
                                              const AlignmentDirectional(-1.0, 0.0),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: const ValueKey(
                                                  'SignUp_ConfirmPassword_5an3'),
                                              controller: _model
                                                  .signUpConfirmPasswordTextController,
                                              focusNode: _model
                                                  .signUpConfirmPasswordFocusNode,
                                              autofocus: false,
                                              obscureText: !_model
...
                                      Align(
                                        alignment:
                                            const AlignmentDirectional(-1.0, 0.0),
                                        child: SizedBox(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: const ValueKey('Login_Email_483x'),
                                            controller:
                                                _model.loginEmailTextController,
                                            focusNode:
                                                _model.loginEmailFocusNode,
                                            autofocus: false,
                                            obscureText: false,
...
                                        alignment:
                                            const AlignmentDirectional(-1.0, 0.0),
                                        child: SizedBox(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key:
                                                const ValueKey('Login_Password_00xj'),
                                            controller: _model
                                                .loginPasswordTextController,
                                            focusNode:
                                                _model.loginPasswordFocusNode,
                                            autofocus: false,
                                            obscureText:
...
                      ),
                    ),
                    Stack(
                      children: [
                        if (_model.tabBarCurrentIndex == 1)
                          FFButtonWidget(
                            key: const ValueKey('Login_Button_udfc'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_PAGE_PAGE_Login_Button_ON_TAP');
                              logFirebaseEvent('Login_Button_validate_form');
                              if (_model.formKey1.currentState == null ||
                                  !_model.formKey1.currentState!.validate()) {
...
                              borderRadius: BorderRadius.circular(20.0),
                            ),
                          ).animateOnPageLoad(
                              animationsMap['buttonOnPageLoadAnimation1']!),
                        if (_model.tabBarCurrentIndex == 0)
                          FFButtonWidget(
                            key: const ValueKey('SignUp_Button_u7bb'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_PAGE_PAGE_SignUp_Button_ON_TAP');
                              logFirebaseEvent('SignUp_Button_validate_form');
                              if (_model.formKey2.currentState == null ||
                                  !_model.formKey2.currentState!.validate()) {
...
