...
                            child: Padding(
                              padding: const EdgeInsetsDirectional.fromSTEB(
                                  4.0, 0.0, 4.0, 12.0),
                              child: Container(
                                decoration: const BoxDecoration(),
                                child: FFButtonWidget(
                                  key: const ValueKey('Button_v4uz'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'HOMEPAGE_PAGE_NEW_POST_BTN_ON_TAP');
                                    logFirebaseEvent('Button_navigate_to');

                                    context.pushNamed(
...
