...
                                            mainAxisSize: MainAxisSize.max,
                                            children: [
                                              SizedBox(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key:
                                                      const ValueKey('PostBody_02v4'),
                                                  controller: _model
                                                      .postBodyTextController,
                                                  focusNode:
                                                      _model.postBodyFocusNode,
                                                  autofocus: false,
                                                  obscureText: false,
...
